[gd_scene load_steps=2 format=3 uid="uid://dtwtasyc1tvtl"]

[ext_resource type="Script" uid="uid://cesn7iibjykrg" path="res://scenes/ui/main_ui.gd" id="1_hnesk"]

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hnesk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Spacer3" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="DayLabel" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Day: 1"

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="DayTimeLabel" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Time"

[node name="Spacer2" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -175.0
offset_right = 20.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="MarginContainer2/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Survive the Night!"
